# LA-earthquake

./: 05_kNearestNeighbors_resolvidos.ipynb  07_Arvores_Decisao_resolvido.ipynb  09_RegLogistica_resolvido.ipynb  README.md  main.ipynb  pyproject.toml
